--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="navigation_drawer_open">Drawer Open</string>
     <string name="navigation_drawer_close">Drawer Closed</string>
     <string name="chatapp">ChatApp</string>
+    <string name="todo">TODO</string>
+    <string name="todo1">TODO</string>
+    <string name="username">Username</string>
+    <string name="todo123">TODO</string>
 </resources>
