--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ChatApp</string>
+    <string name="app_name">Vibsey</string>
     <string name="my_profile">My Profile</string>
     <string name="chat_list">Chat List</string>
     <string name="find_friends">Find Friends</string>
